--- a/base/templates/AdminLTE/index.html
+++ b/base/templates/AdminLTE/index.html
@@ -212,7 +212,7 @@
             <li class=""><a href="{% url 'movimiento' %}"><i class="fa fa-circle-o"></i> Movimientos</a></li>
           </ul>
         </li>
-        <li class="treeview">
+        <!--li class="treeview">
           <a href="#">
             <i class="fa fa-dashboard"></i> <span>Catalogo</span>
             <span class="pull-right-container">
@@ -220,9 +220,11 @@
             </span>
           </a>
           <ul class="treeview-menu">
+            {% comment %}
             <li class=""><a href="{% url 'catalogos' %}"><i class="fa fa-circle-o"></i> Lista</a></li>
+            {% endcomment %}
           </ul>
-        </li>
+        </li-->
         <li class="treeview">
           <a href="#">
             <i class="fa fa-dashboard"></i> <span>Rutas</span>
@@ -289,11 +291,14 @@
     <section class="content-header">
       <h1>
         Bienvenido
-        <small>inicio</small>
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Inicio</a></li>
-        <li class="active">Dashboard</li>
+        <li><a href="#"><i class="fa fa-dashboard"></i> Forsales </a></li>
+
+        <li v-for="breadcrumb in breadcrumbs"><a href="#"><i class="fa fa-dashboard"></i> [[breadcrumb]] </a></li>
+
+        <!--li class="active">Dashboard</li-->
       </ol>
     </section>
 
