--- a/base/templates/distribuidores/listar.html
+++ b/base/templates/distribuidores/listar.html
@@ -19,8 +19,8 @@
 					<td>{{ distribuidor.nombre }}</td>
 					<td>{{ distribuidor.apellido }}</td>
 					<td>{{ distribuidor.cedula }}</td>
-					<td>{{ proveedor.direccion }}</td>
-					<td>{{ proveedor.telefono }}</td>
+					<td>{{ distribuidor.direccion }}</td>
+					<td>{{ distribuidor.telefono }}</td>
 					<td><a href="{% url 'actualizar_distribuidor' distribuidor.pk %}">Editar</a></td>
 					<td><a href="{% url 'borrar_distribuidor' distribuidor.pk %}">Borrar</a></td>
 				</tr>
